try to fix baseurl

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
+baseurl: /RL/RLRLRLRL
 theme: jekyll-theme-minimal
 title: Reinforcement Learning Mastery
 description: My personal RL learning path
-baseurl: /RL/
