--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-# baseurl: /RL/RLRLRLRL
+baseurl: /RL
 theme: jekyll-theme-minimal
 title: Reinforcement Learning Mastery
 description: My personal RL learning path
