--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,3 +2,10 @@ baseurl: /RL
 theme: jekyll-theme-minimal
 title: Reinforcement Learning Mastery
 description: My personal RL learning path
+
+kramdown:
+  math_engine: mathjax
+  parse_block_html: true
+  syntax_highlighter_opts:
+    block:
+      line_numbers: false
